--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.3",
+        "realrashid/sweet-alert": "^7.1",
         "spatie/laravel-permission": "^6.3"
     },
     "require-dev": {
