--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,15 @@
     "require": {
         "php": "^8.0",
         "appslabke/lara-izitoast": "^1.1",
+        "drewm/mailchimp-api": "^2.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.3",
+        "spatie/laravel-newsletter": "^5.1",
         "spatie/laravel-permission": "^6.3",
+        "spatie/mailcoach-sdk-php": "^1.4",
         "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
